--- a/scrolla-redesign/tsconfig.json
+++ b/scrolla-redesign/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../UseCaseGallery (1).tsx"],
   "exclude": ["node_modules"]
 }
